[gd_scene load_steps=11 format=3 uid="uid://dxl5pjij0odc4"]

[ext_resource type="Script" path="res://AutoLoad/GUIModel.gd" id="1_531oo"]
[ext_resource type="Theme" uid="uid://cnw25cdhcyxjc" path="res://sources/Default.tres" id="1_ni6fh"]
[ext_resource type="FontFile" uid="uid://dt8k30c14r87d" path="res://sources/fonts/VonwaonBitmap-16px.ttf" id="3_tmg8p"]
[ext_resource type="Script" path="res://AutoLoad/Setting.gd" id="3_vathi"]
[ext_resource type="Script" path="res://AutoLoad/DLC.gd" id="5_3ioap"]
[ext_resource type="Texture2D" uid="uid://r2qm0awehrmv" path="res://icon.svg" id="6_ob4n7"]
[ext_resource type="Script" path="res://AutoLoad/BarBasic.gd" id="8_kujw8"]
[ext_resource type="Script" path="res://AutoLoad/ChapterTitle.gd" id="9_ogaqm"]
[ext_resource type="Texture2D" uid="uid://bx27ke8pwhuh0" path="res://sources/GUI/ChattingBox/paper/1.png" id="50_i7fh5"]

[sub_resource type="Theme" id="Theme_u1st0"]
default_font = ExtResource("3_tmg8p")
default_font_size = 32
Button/colors/font_color = Color(0.960784, 0.960784, 0.862745, 1)
Label/colors/font_color = Color(0, 0, 0, 1)
ProgressBar/colors/font_color = Color(0.960784, 0.960784, 0.862745, 1)
RichTextLabel/colors/default_color = Color(0, 0, 0, 1)

[node name="GUIModel" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ni6fh")
script = ExtResource("1_531oo")

[node name="Setting" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_u1st0")
script = ExtResource("3_vathi")

[node name="Mask" type="ColorRect" parent="Setting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="SettingBox" type="MarginContainer" parent="Setting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="TextureRect" type="TextureRect" parent="Setting/SettingBox"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("50_i7fh5")

[node name="MarginContainer" type="MarginContainer" parent="Setting/SettingBox/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="Setting/SettingBox/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 52
text = "》游戏设置《"

[node name="Tabs" type="HBoxContainer" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfigContainer" type="ScrollContainer" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Configs" type="VBoxContainer" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer/ConfigContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LineEdit" type="LineEdit" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer/ConfigContainer/Configs"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer/ConfigContainer/Configs"]
layout_mode = 2

[node name="HSlider" type="HSlider" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer/ConfigContainer/Configs"]
layout_mode = 2

[node name="Description" type="Label" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 52

[node name="Buttoms" type="HBoxContainer" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Cancel" type="Button" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer/Buttoms"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 52
text = "取消"
metadata/ButtomType = "cancel"

[node name="Apply" type="Button" parent="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer/Buttoms"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 52
text = "应用"
metadata/ButtomType = "apply"

[node name="DLC" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ni6fh")
script = ExtResource("5_3ioap")

[node name="Mask" type="ColorRect" parent="DLC"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.392157)

[node name="DLCBox" type="MarginContainer" parent="DLC"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="TextureRect" type="TextureRect" parent="DLC/DLCBox"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("50_i7fh5")

[node name="MarginContainer" type="MarginContainer" parent="DLC/DLCBox/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="DLC/DLCBox/TextureRect/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Title" type="Label" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 52
text = "》DLC追加内容《"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 30

[node name="ItemList" type="ItemList" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
same_column_width = true

[node name="Detail" type="VBoxContainer" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 30

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Detail"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2

[node name="ItemIcon" type="TextureRect" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Detail/AspectRatioContainer"]
layout_mode = 2
texture = ExtResource("6_ob4n7")

[node name="Description" type="RichTextLabel" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Detail"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "简介："
fit_content = true

[node name="ActiveButtom" type="CheckButton" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/Detail"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 10
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "启用"

[node name="Buttoms" type="HBoxContainer" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Cancel" type="Button" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/Buttoms"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 52
text = "取消"
metadata/ButtomType = "cancel"

[node name="Apply" type="Button" parent="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/Buttoms"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 52
text = "应用"
metadata/ButtomType = "apply"

[node name="BarBasic" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_kujw8")

[node name="ChapterTitle" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_ogaqm")

[connection signal="pressed" from="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer/Buttoms/Cancel" to="Setting" method="_on_cancel_pressed"]
[connection signal="pressed" from="Setting/SettingBox/TextureRect/MarginContainer/VBoxContainer/Buttoms/Apply" to="Setting" method="_on_apply_pressed"]
[connection signal="pressed" from="DLC/DLCBox/TextureRect/MarginContainer/VBoxContainer/Buttoms/Cancel" to="DLC" method="_on_cancel_pressed"]
